--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,3 +34,5 @@
 @import './pages/orders';
 @import './pages/return';
 @import './pages/search';
+@import './pages/home';
+@import './pages/contact';
