--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -5,10 +5,17 @@ $midnight : #7A306C  ;
 $forest_green : #119822;
 $crimson : #B3001B;
 $meat_brown : #E0CA3C;
+$orange : #F75C03;
+
+
 // fonts
 $font_para: 'Bebas Neue', cursive;
 $font_heading : 'Bowlby One SC', cursive;
 $font_cursive : 'Pacifico', cursive;
+
+$heebo : 'Heebo', sans-serif;
+$anton : 'Anton', sans-serif;
+$abel : 'Abel', sans-serif;
 
 // patterns
 
