--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,43 @@ body {
     -webkit-box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.32);
     -moz-box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.32);
     box-shadow: 3px 4px 5px 0px rgba(0, 0, 0, 0.32); }
+  .cart .empty-cart {
+    background-image: url(https://cdn.dribbble.com/users/2046015/screenshots/4591856/first_white_girl_drbl.gif);
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    border: 2px solid #7A306C;
+    background-size: cover;
+    background-position: left; }
+  .cart .allowed-to-shop {
+    margin-bottom: 1em;
+    background-color: rgba(224, 202, 60, 0.6);
+    padding: 0.5em 0.6em;
+    -webkit-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+    -moz-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+    box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+    border-radius: 0.3em;
+    width: 300px; }
+    .cart .allowed-to-shop h4 {
+      font-family: "Abel", sans-serif;
+      color: #B3001B;
+      font-size: 1.3em; }
+    .cart .allowed-to-shop a {
+      text-decoration: none;
+      font-family: "Heebo", sans-serif;
+      color: #531CB3; }
+  .cart .latest-order {
+    background-color: rgba(17, 152, 34, 0.5);
+    padding: 0.4em 0.6em;
+    margin-bottom: 1em;
+    width: 300px;
+    border-radius: 0.3em;
+    font-family: "Abel", sans-serif;
+    text-align: center;
+    color: #073c0d; }
+    .cart .latest-order a {
+      text-decoration: none;
+      color: #7A306C; }
   .cart .buy-now {
     width: 250px;
     font-size: 1.2em;
@@ -416,31 +453,41 @@ body {
       .order-details .order-info .orders .single-order .total {
         width: 60px; }
 
-.edit-profile .user-infor {
+.edit-profile {
+  position: fixed;
+  top: 25vh;
   width: 100%;
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  margin: 1em 0; }
-  .edit-profile .user-infor h1 {
-    background-image: linear-gradient(to right, #101935, #531CB3);
-    width: fit-content;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    color: transparent; }
-    @media (max-width: 420px) {
-      .edit-profile .user-infor h1 {
-        font-size: 1.6em; } }
-  .edit-profile .user-infor h2 {
-    font-family: "Pacifico", cursive;
-    border: 1px solid #531CB3;
-    padding: 0.3em 0.7em;
-    border-radius: 0.3em;
-    color: #1c2b5c; }
-  .edit-profile .user-infor p {
-    font-family: "Bebas Neue", cursive;
-    color: #531CB3; }
+  background-color: white;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%237a306c' fill-opacity='0.4'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  -webkit-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+  -moz-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+  box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+  padding-bottom: 1em; }
+  .edit-profile .user-infor {
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    margin: 1em 0; }
+    .edit-profile .user-infor h1 {
+      background-image: linear-gradient(to right, #101935, #531CB3);
+      width: fit-content;
+      background-clip: text;
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      color: transparent; }
+      @media (max-width: 420px) {
+        .edit-profile .user-infor h1 {
+          font-size: 1.6em; } }
+    .edit-profile .user-infor h2 {
+      font-family: "Pacifico", cursive;
+      border: 1px solid #531CB3;
+      padding: 0.3em 0.7em;
+      border-radius: 0.3em;
+      color: #1c2b5c; }
+    .edit-profile .user-infor p {
+      font-family: "Bebas Neue", cursive;
+      color: #531CB3; }
 
 .edit-profile-form {
   width: 100%; }
@@ -456,6 +503,11 @@ body {
       -webkit-background-clip: text;
       -moz-background-clip: text;
       color: transparent; }
+      .edit-profile-form form .form-group h3 a {
+        text-decoration: none;
+        font-size: 1.2em;
+        color: #B3001B;
+        margin-left: 0.3em; }
     .edit-profile-form form .form-group input {
       font-family: "Bebas Neue", cursive;
       font-size: 1.1em;
@@ -902,6 +954,17 @@ body {
       font-family: "Bowlby One SC", cursive;
       width: fit-content;
       margin: 0.4em auto; }
+    .product-details .product .go-to-cart {
+      text-align: center;
+      color: #531CB3;
+      margin-top: 1em; }
+      .product-details .product .go-to-cart a {
+        text-decoration: none;
+        color: #0c6a18;
+        font-family: "Bebas Neue", cursive;
+        font-size: 1.1em;
+        border-top: 1px solid #531CB3;
+        border-bottom: 1px solid #531CB3; }
     .product-details .product .variants .variant h4 {
       font-family: "Pacifico", cursive;
       color: #877815;
@@ -1051,61 +1114,40 @@ body {
         font-family: "Bebas Neue", cursive;
         font-size: 1em;
         color: white; }
-  .profile .add-address .form-group {
-    display: flex;
-    flex-flow: column;
-    align-items: center; }
-    .profile .add-address .form-group h4 {
-      font-family: "Abel", sans-serif;
-      color: #531CB3; }
-  .profile .add-address h1 {
-    background-image: linear-gradient(to right, #119822, #531CB3);
-    width: fit-content;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    color: transparent;
-    margin: 0.5em auto; }
-    @media (max-width: 360px) {
-      .profile .add-address h1 {
-        font-size: 1.5em; } }
-  .profile .add-address input {
-    width: 300px;
-    font-family: "Abel", sans-serif;
-    padding: 0.3em 0.4em;
-    margin: 0.3em;
-    border-radius: 0.3em;
-    border: 1px solid #F75C03;
-    color: #531CB3; }
-  .profile .add-address button {
-    font-family: "Bowlby One SC", cursive;
-    padding: 0.4em 0;
-    width: 300px;
-    border-radius: 0.3em;
-    background-image: linear-gradient(to bottom, #119822, #0c6a18);
-    border: none;
-    cursor: pointer;
-    transition: all 0.3s;
-    color: white;
-    margin: 0.5em; }
-    .profile .add-address button:hover {
-      transform: translateY(-4px);
-      -webkit-box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52);
-      -moz-box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52);
-      box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52); }
-    .profile .add-address button:active {
-      transform: translateY(4px);
-      -webkit-box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52);
-      -moz-box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52);
-      box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52); }
-  .profile .add-contact .form-group {
-    display: flex;
-    flex-flow: column;
-    align-items: center; }
-    .profile .add-contact .form-group h3 {
-      font-family: "Abel", sans-serif;
-      color: #531CB3; }
-    .profile .add-contact .form-group input {
+  .profile .add-address {
+    position: fixed;
+    top: 20vh;
+    width: 100%;
+    background-color: white;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%237a306c' fill-opacity='0.4'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    -webkit-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+    -moz-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+    box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+    padding-bottom: 1em; }
+    .profile .add-address .form-group {
+      display: flex;
+      flex-flow: column;
+      align-items: center; }
+      .profile .add-address .form-group h4 {
+        font-family: "Abel", sans-serif;
+        color: #531CB3; }
+    .profile .add-address h1 {
+      background-image: linear-gradient(to right, #119822, #531CB3);
+      width: fit-content;
+      background-clip: text;
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      color: transparent;
+      margin: 0.5em auto; }
+      @media (max-width: 360px) {
+        .profile .add-address h1 {
+          font-size: 1.5em; } }
+      .profile .add-address h1 a {
+        text-decoration: none;
+        font-size: 1.2em;
+        color: #B3001B;
+        margin-left: 0.3em; }
+    .profile .add-address input {
       width: 300px;
       font-family: "Abel", sans-serif;
       padding: 0.3em 0.4em;
@@ -1113,7 +1155,7 @@ body {
       border-radius: 0.3em;
       border: 1px solid #F75C03;
       color: #531CB3; }
-    .profile .add-contact .form-group button {
+    .profile .add-address button {
       font-family: "Bowlby One SC", cursive;
       padding: 0.4em 0;
       width: 300px;
@@ -1124,16 +1166,83 @@ body {
       transition: all 0.3s;
       color: white;
       margin: 0.5em; }
-      .profile .add-contact .form-group button:hover {
+      .profile .add-address button:hover {
         transform: translateY(-4px);
         -webkit-box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52);
         -moz-box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52);
         box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52); }
-      .profile .add-contact .form-group button:active {
+      .profile .add-address button:active {
         transform: translateY(4px);
         -webkit-box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52);
         -moz-box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52);
         box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52); }
+  .profile .add-contact {
+    position: fixed;
+    bottom: 1vh;
+    width: 100%;
+    background-color: white;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%237a306c' fill-opacity='0.4'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    -webkit-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+    -moz-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+    box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+    padding-bottom: 1em; }
+    .profile .add-contact h1 {
+      display: flex;
+      align-items: center;
+      background-image: linear-gradient(to right, #119822, #531CB3);
+      width: fit-content;
+      background-clip: text;
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      color: transparent;
+      margin: 0.5em auto; }
+      @media (max-width: 360px) {
+        .profile .add-contact h1 {
+          font-size: 1.5em; } }
+      .profile .add-contact h1 a {
+        text-decoration: none;
+        font-size: 1.2em;
+        color: #B3001B;
+        margin-left: 0.3em; }
+    .profile .add-contact .form-group {
+      display: flex;
+      flex-flow: column;
+      align-items: center; }
+      .profile .add-contact .form-group h3 {
+        font-family: "Abel", sans-serif;
+        color: #531CB3; }
+      .profile .add-contact .form-group input {
+        width: 300px;
+        font-family: "Abel", sans-serif;
+        padding: 0.3em 0.4em;
+        margin: 0.3em;
+        border-radius: 0.3em;
+        border: 1px solid #F75C03;
+        color: #531CB3; }
+      .profile .add-contact .form-group button {
+        font-family: "Bowlby One SC", cursive;
+        padding: 0.4em 0;
+        width: 300px;
+        border-radius: 0.3em;
+        background-image: linear-gradient(to bottom, #119822, #0c6a18);
+        border: none;
+        cursor: pointer;
+        transition: all 0.3s;
+        color: white;
+        margin: 0.5em; }
+        .profile .add-contact .form-group button:hover {
+          transform: translateY(-4px);
+          -webkit-box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52);
+          -moz-box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52);
+          box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52); }
+        .profile .add-contact .form-group button:active {
+          transform: translateY(4px);
+          -webkit-box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52);
+          -moz-box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52);
+          box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52); }
+      .profile .add-contact .form-group .latest h4 {
+        font-family: "Bebas Neue", cursive;
+        color: #119822; }
 
 .logout-btn {
   font-size: 1.3em;
