--- a/src/scss/components/_edit_profile.scss
+++ b/src/scss/components/_edit_profile.scss
@@ -1,4 +1,11 @@
 .edit-profile{
+    position: fixed;
+        top : 25vh;
+        width : 100%;
+        background-color: white;
+        background-image: $graph;
+        @include card_shadow;
+        padding-bottom: 1em;
     .user-infor{
         width : 100%;
         display: flex;
@@ -37,6 +44,12 @@
             h3{
                 font-family: $font_cursive;
                 @include gradient_text($forest_green,$midnight);
+                a{
+                    text-decoration: none;
+                    font-size: 1.2em;
+                    color: $crimson;
+                    margin-left: 0.3em;
+                }
             }
             input{
                 font-family: $font_para;
