--- a/src/scss/elements/_cart.scss
+++ b/src/scss/elements/_cart.scss
@@ -25,6 +25,50 @@
         -moz-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.32);
         box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.32);
     }
+    
+    .empty-cart{
+        background-image: url(https://cdn.dribbble.com/users/2046015/screenshots/4591856/first_white_girl_drbl.gif);
+        height: 300px;
+        width : 300px;
+        border-radius: 50%;
+        border: 2px solid $midnight;
+        background-size: cover;
+        background-position: left;
+        
+        
+    }
+    .allowed-to-shop{
+        margin-bottom: 1em;
+        background-color: rgba($meat_brown,0.6);
+        padding : 0.5em 0.6em;
+        @include card_shadow;
+        border-radius: 0.3em;
+        width: 300px;
+        h4{
+            font-family: $abel;
+            color: $crimson;
+            font-size: 1.3em;
+        }
+        a{
+            text-decoration: none;
+            font-family: $heebo;
+            color: $ocen_blue;
+        }
+    }
+    .latest-order{
+        background-color: rgba($forest_green,0.5);
+        padding : 0.4em 0.6em;
+        margin-bottom: 1em;
+        width: 300px;
+        border-radius: 0.3em;
+        font-family: $abel;
+        text-align: center;
+        color: darken($forest_green,20%);
+        a{
+            text-decoration: none;
+            color: $midnight;
+        }
+    }
     .buy-now{
         width : 250px;
         font-size: 1.2em;
@@ -42,6 +86,7 @@
         margin : 1em auto;
 
     }
+    
     .sublets{
         width : 100%;
         display: flex;
