--- a/src/scss/pages/_product_details.scss
+++ b/src/scss/pages/_product_details.scss
@@ -111,6 +111,20 @@
                 margin: 0.4em auto;
             }
         }
+        .go-to-cart{
+            a{
+                text-decoration: none;
+                color: darken($forest_green,10%);
+                font-family: $font_para;
+                font-size: 1.1em;
+                border-top: 1px solid $ocen_blue;
+                border-bottom: 1px solid $ocen_blue;
+            }
+            text-align: center;
+            color: $ocen_blue;
+            margin-top: 1em;
+            
+        }
         .variants{
 
             .variant{
