--- a/src/scss/pages/_profile.scss
+++ b/src/scss/pages/_profile.scss
@@ -116,7 +116,13 @@
         }
     }
     .add-address{
-        
+        position: fixed;
+        top : 20vh;
+        width : 100%;
+        background-color: white;
+        background-image: $graph;
+        @include card_shadow;
+        padding-bottom: 1em;
         .form-group{
             display: flex;
             flex-flow: column;
@@ -132,6 +138,12 @@
             margin : 0.5em auto;
             @media (max-width : 360px){
                 font-size: 1.5em;
+            }
+            a{
+                text-decoration: none;
+                font-size: 1.2em;
+                color: $crimson;
+                margin-left: 0.3em;
             }
         }
         input{
@@ -161,6 +173,28 @@
         
     }
     .add-contact{
+        position: fixed;
+        bottom : 1vh;
+        width : 100%;
+        background-color: white;
+        background-image: $graph;
+        @include card_shadow;
+        padding-bottom: 1em;
+        h1{
+            display: flex;
+            align-items: center;
+            @include gradient_text($forest_green,$ocen_blue);
+            margin : 0.5em auto;
+            @media (max-width : 360px){
+                font-size: 1.5em;
+            }
+            a{
+                text-decoration: none;
+                font-size: 1.2em;
+                color: $crimson;
+                margin-left: 0.3em;
+            }
+        }
         .form-group{
             display: flex;
             flex-flow: column;
@@ -192,6 +226,12 @@
                 @include btn_interaction;
                 color: white;
                 margin : 0.5em;
+            }
+            .latest{
+                h4{
+                    font-family: $font_para;
+                    color: $forest_green;
+                }
             }
         }
     }
