--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,9 @@
 @import './components/loading_pickinghub';
 @import './components/order_details';
 @import './components/edit_profile';
+@import './components/suggested_products';
+@import './components/special_deals';
+@import './components/catelogue_promo';
 
 
 // importting pages
