--- a/src/scss/pages/_register_page.scss
+++ b/src/scss/pages/_register_page.scss
@@ -3,7 +3,11 @@
     width : 100vw;
     height : 100vh;
     overflow: auto;
-    
+    h1{
+        @media (max-width : 420px){
+            font-size: 2.5em;
+        }
+    }
     .form{
         position: absolute;
         top : 50%;
@@ -11,5 +15,22 @@
         transform: translate(-50%,-50%);
         margin-top: 2em;
         margin-bottom: 6em;
+    }
+    .sub-nav{
+        margin : 0.3em 0;
+        width : 300px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        h4{
+            color: $ocen_blue;
+            font-family: $font_para;
+        }
+        a{
+            color: $maastricth_blue;
+            font-family: $font_cursive;
+            text-decoration: none;
+
+        }
     }
 }
