--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,27 @@
 @import url("https://fonts.googleapis.com/css?family=Bebas+Neue|Bowlby+One+SC|Pacifico&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Abel|Anton|Heebo&display=swap");
+@keyframes colorSwitch {
+  0% {
+    color: #9d8b19; }
+  20% {
+    color: #F75C03; }
+  40% {
+    color: #073c0d; }
+  60% {
+    color: #7A306C; }
+  80% {
+    color: #531CB3; }
+  100% {
+    color: #101935; } }
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
 
 body {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='88' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23d9d9d9' fill-opacity='0.3'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.1'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E"); }
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='88' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23d9d9d9' fill-opacity='0.3'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.1'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
+  scroll-behavior: smooth; }
   body h1 {
     font-family: "Bowlby One SC", cursive; }
   body #root {
@@ -542,6 +557,176 @@ body {
         -moz-box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52);
         box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52); }
 
+.suggested-products h2 {
+  font-family: "Bowlby One SC", cursive;
+  background-image: linear-gradient(to right, #7A306C, #531CB3);
+  width: fit-content;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  color: transparent;
+  margin: 0.5em auto; }
+
+.suggested-products .products-list {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center; }
+  .suggested-products .products-list .one-product {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 1em;
+    border-bottom: 1px solid rgba(83, 28, 179, 0.4);
+    width: 300px; }
+    .suggested-products .products-list .one-product img {
+      width: 60px; }
+    .suggested-products .products-list .one-product h3 {
+      width: 220px;
+      font-family: "Abel", sans-serif;
+      font-size: 0.9em;
+      padding-left: 10px; }
+      .suggested-products .products-list .one-product h3 a {
+        text-decoration: none;
+        color: #531CB3; }
+
+.special-deals {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 100%; }
+  .special-deals h2 {
+    font-family: "Bowlby One SC", cursive;
+    background-image: linear-gradient(to right, #7A306C, #531CB3);
+    width: fit-content;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    color: transparent;
+    margin: 0.5em 0; }
+  .special-deals .all-deals {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap; }
+    .special-deals .all-deals .single-deal {
+      position: relative;
+      margin: 1em;
+      -webkit-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+      -moz-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
+      box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47); }
+      .special-deals .all-deals .single-deal .deal-img {
+        width: 300px;
+        height: 200px;
+        object-fit: cover;
+        object-position: center; }
+      .special-deals .all-deals .single-deal h4 {
+        font-family: "Bebas Neue", cursive;
+        background-image: linear-gradient(to right, #7A306C, #531CB3);
+        color: white;
+        margin-top: -5px;
+        padding: 0.4em 0.6em;
+        letter-spacing: 1px; }
+      .special-deals .all-deals .single-deal .info {
+        position: absolute;
+        top: 6px;
+        right: 0; }
+        .special-deals .all-deals .single-deal .info p {
+          color: white;
+          font-family: "Heebo", sans-serif;
+          padding: 0.3em 0.6em;
+          font-size: 0.8em; }
+        .special-deals .all-deals .single-deal .info .active-deal {
+          background-color: #0c6a18; }
+        .special-deals .all-deals .single-deal .info .expired-deal {
+          background-color: #800013; }
+      .special-deals .all-deals .single-deal .desc {
+        width: 300px;
+        padding: 0.4em;
+        font-family: "Abel", sans-serif;
+        font-size: 0.65em;
+        line-height: 13px; }
+        .special-deals .all-deals .single-deal .desc p {
+          font-weight: 600;
+          color: #119822; }
+      .special-deals .all-deals .single-deal .discount {
+        background-color: white;
+        border-radius: 0.3em;
+        padding: 0.4em 0.6em;
+        position: absolute;
+        top: 120px;
+        left: 50%;
+        transform: translate(-50%, -50%); }
+        .special-deals .all-deals .single-deal .discount p {
+          font-family: "Bowlby One SC", cursive;
+          color: #0c6a18;
+          animation: colorSwitch 6s ease-in-out infinite alternate; }
+      .special-deals .all-deals .single-deal .deal-products {
+        width: 100%; }
+        .special-deals .all-deals .single-deal .deal-products .single-deal-product {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+          border-radius: 0.3em;
+          overflow: hidden;
+          margin: 0.4em 0;
+          padding: 0.4em 0; }
+          .special-deals .all-deals .single-deal .deal-products .single-deal-product .product-img {
+            width: 80px; }
+          .special-deals .all-deals .single-deal .deal-products .single-deal-product h5 {
+            width: 150px; }
+            .special-deals .all-deals .single-deal .deal-products .single-deal-product h5 a {
+              text-decoration: none;
+              font-family: "Abel", sans-serif;
+              font-size: 0.9em; }
+
+.catelogue-promo {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 100%; }
+  .catelogue-promo h2 {
+    font-family: "Bowlby One SC", cursive;
+    background-image: linear-gradient(to right, #7A306C, #531CB3);
+    width: fit-content;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    color: transparent;
+    margin: 0.5em 0; }
+  .catelogue-promo .department-list {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center; }
+    .catelogue-promo .department-list .one-dept {
+      position: relative;
+      width: 150px;
+      margin: 1em; }
+      @media (max-width: 420px) {
+        .catelogue-promo .department-list .one-dept {
+          width: 140px;
+          margin: 0.4em; } }
+      .catelogue-promo .department-list .one-dept img {
+        width: 150px;
+        height: 100px;
+        object-fit: cover; }
+      .catelogue-promo .department-list .one-dept h4 {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: "Bebas Neue", cursive;
+        padding: 0.4em 0.6em;
+        border-radius: 0.3em;
+        background-image: linear-gradient(to right, #7A306C, #531CB3); }
+        .catelogue-promo .department-list .one-dept h4 a {
+          text-decoration: none;
+          color: white;
+          font-weight: 100; }
+
 .login-page {
   position: relative;
   width: 100vw;
@@ -570,6 +755,9 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: auto; }
+  @media (max-width: 420px) {
+    .register-page h1 {
+      font-size: 2.5em; } }
   .register-page .form {
     position: absolute;
     top: 50%;
@@ -577,6 +765,19 @@ body {
     transform: translate(-50%, -50%);
     margin-top: 2em;
     margin-bottom: 6em; }
+  .register-page .sub-nav {
+    margin: 0.3em 0;
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    .register-page .sub-nav h4 {
+      color: #531CB3;
+      font-family: "Bebas Neue", cursive; }
+    .register-page .sub-nav a {
+      color: #101935;
+      font-family: "Pacifico", cursive;
+      text-decoration: none; }
 
 .terms {
   height: 100vh;
@@ -864,23 +1065,39 @@ body {
     width: 100%;
     transition: all 0.4s; }
     .product-details .product .image-box {
-      width: 100vw; }
+      width: 100vw;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center; }
+      @media (max-width: 768px) {
+        .product-details .product .image-box {
+          width: 100vw; } }
       .product-details .product .image-box .big-image {
-        width: 100%;
-        height: 75vh;
+        width: 40%;
+        height: 70vh;
         overflow: auto;
         transition: all 0.4s; }
+        @media (max-width: 768px) {
+          .product-details .product .image-box .big-image {
+            width: 100%;
+            height: 65vh; } }
         .product-details .product .image-box .big-image img {
           width: 100%; }
       .product-details .product .image-box .image-set {
-        width: 100vw;
+        width: 50vw;
         height: fit-content;
         display: flex;
         align-items: center;
         overflow: auto; }
+        @media (max-width: 768px) {
+          .product-details .product .image-box .image-set {
+            width: 100vw; } }
         .product-details .product .image-box .image-set .image img {
           width: 80px;
           margin: 0 0.4em; }
+          @media (max-width: 375px) {
+            .product-details .product .image-box .image-set .image img {
+              width: 60px; } }
     .product-details .product .info h1 {
       background-image: linear-gradient(to right, #7A306C, #531CB3);
       width: fit-content;
@@ -888,14 +1105,21 @@ body {
       -webkit-background-clip: text;
       -moz-background-clip: text;
       color: transparent;
-      margin: 0.5em; }
+      margin: 0.5em auto; }
+      @media (max-width: 768px) {
+        .product-details .product .info h1 {
+          margin: 0.5em; } }
       @media (max-width: 420px) {
         .product-details .product .info h1 {
           font-size: 1.7em; } }
     .product-details .product .info p {
       font-family: "Bebas Neue", cursive;
       color: #531CB3;
-      margin: 1em; }
+      margin: 1em;
+      text-align: center; }
+      @media (max-width: 768px) {
+        .product-details .product .info p {
+          text-align: left; } }
     .product-details .product .informations {
       margin: 1em 0;
       width: 100%;
@@ -965,6 +1189,41 @@ body {
         font-size: 1.1em;
         border-top: 1px solid #531CB3;
         border-bottom: 1px solid #531CB3; }
+    .product-details .product .not-loggedin-msg {
+      width: 300px;
+      margin: 0.5em auto;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr; }
+      .product-details .product .not-loggedin-msg p {
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 1;
+        grid-column-end: 3;
+        font-family: "Bebas Neue", cursive;
+        color: #9d8b19;
+        animation: colorSwitch 5s ease-in-out infinite alternate; }
+      .product-details .product .not-loggedin-msg a {
+        text-decoration: none;
+        font-family: "Abel", sans-serif;
+        background-color: #0c6a18;
+        padding: 0.3em 0.5em;
+        color: white;
+        width: 95%;
+        border-radius: 0.3em;
+        text-align: center;
+        cursor: pointer;
+        transition: all 0.3s; }
+        .product-details .product .not-loggedin-msg a:hover {
+          transform: translateY(-4px);
+          -webkit-box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52);
+          -moz-box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52);
+          box-shadow: 4px 2px 36px 0px rgba(16, 25, 53, 0.52); }
+        .product-details .product .not-loggedin-msg a:active {
+          transform: translateY(4px);
+          -webkit-box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52);
+          -moz-box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52);
+          box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52); }
     .product-details .product .variants .variant h4 {
       font-family: "Pacifico", cursive;
       color: #877815;
