--- a/src/scss/pages/_product_details.scss
+++ b/src/scss/pages/_product_details.scss
@@ -8,9 +8,19 @@
         transition: all 0.4s;
         .image-box{
             width : 100vw;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            @media (max-width : 768px){
+                width: 100vw;
+            }
             .big-image {
-                width: 100%;
-                height: 75vh;
+                width: 40%;
+                height: 70vh;
+                @media (max-width : 768px){
+                    width: 100%;
+                    height : 65vh;
+                }
                 overflow: auto;
                 transition: all 0.4s;
                img{
@@ -20,7 +30,10 @@
                }
             }
             .image-set{
-                width : 100vw;
+                width : 50vw;
+                @media (max-width : 768px){
+                    width: 100vw;
+                }
                 height: fit-content;
                 display: flex;
                 align-items: center;
@@ -32,6 +45,9 @@
                     
                     img{
                         width : 80px;
+                        @media (max-width : 375px){
+                            width: 60px;
+                        }
                         margin : 0 0.4em;
                     }
                 }
@@ -40,7 +56,10 @@
         .info{
             h1{
                 @include gradient_text($midnight,$ocen_blue);
-                margin : 0.5em;
+                margin : 0.5em auto;
+                @media (max-width : 768px){
+                   margin: 0.5em;
+                }
                 @media (max-width : 420px){
                     font-size: 1.7em;
                 }
@@ -49,6 +68,10 @@
                 font-family: $font_para;
                 color: $ocen_blue;
                 margin : 1em;
+                text-align: center;
+                @media (max-width : 768px){
+                    text-align: left;
+                }
             }
             
         }
@@ -124,6 +147,33 @@
             color: $ocen_blue;
             margin-top: 1em;
             
+        }
+        .not-loggedin-msg{
+            width : 300px;
+            margin : 0.5em auto;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            p{
+                grid-row-start: 1;
+                grid-row-end: 2;
+                grid-column-start: 1;
+                grid-column-end: 3;
+                font-family: $font_para;
+                color: darken($meat_brown , 20%);
+                animation: colorSwitch 5s ease-in-out infinite alternate;
+            }
+            a{
+                text-decoration: none;
+                font-family: $abel;
+                background-color: darken($forest_green,10%);
+                padding : 0.3em 0.5em;
+                color: white;
+                width : 95%;
+                border-radius: 0.3em;
+                text-align: center;
+                @include btn_interaction;
+            }
         }
         .variants{
 
