--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import './elements/warning';
 @import './elements/cart';
 @import './elements/refresh';
+@import './elements/footer';
 
 // importing components
 @import './components/button';
