--- a/src/App.css
+++ b/src/App.css
@@ -207,6 +207,53 @@ body {
     -moz-box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52);
     box-shadow: 4px 2px 6px 0px rgba(16, 25, 53, 0.52); }
 
+footer {
+  padding: 1em 0;
+  background-color: rgba(83, 28, 179, 0.4);
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  align-items: center;
+  -webkit-box-shadow: 2px -3px 5px 0px rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: 2px -3px 5px 0px rgba(0, 0, 0, 0.18);
+  box-shadow: 2px -3px 5px 0px rgba(0, 0, 0, 0.18); }
+  @media (max-width: 768px) {
+    footer {
+      display: none; } }
+  footer .brand-info {
+    display: flex;
+    flex-flow: column;
+    align-items: center; }
+    footer .brand-info img {
+      width: 100px; }
+    footer .brand-info h2 {
+      margin: 0.5em 0;
+      background-image: linear-gradient(to right, #7A306C, #531CB3);
+      width: fit-content;
+      background-clip: text;
+      -webkit-background-clip: text;
+      -moz-background-clip: text;
+      color: transparent;
+      font-family: "Bowlby One SC", cursive; }
+  footer .navigation ul {
+    margin: 0.5em 0;
+    list-style-type: none;
+    border: 1px solid #531CB3;
+    padding: 0.4em;
+    border-radius: 0.3em; }
+    footer .navigation ul li a {
+      text-decoration: none;
+      font-family: "Bebas Neue", cursive; }
+  footer .contact h4 {
+    font-family: "Abel", sans-serif;
+    color: #7A306C;
+    margin: 0.3em 0; }
+  footer .copyright p {
+    font-family: "Anton", sans-serif;
+    color: #55224c; }
+    footer .copyright p a {
+      color: #101935; }
+
 .form h1 {
   background-image: linear-gradient(to right, #531CB3, #101935);
   width: fit-content;
@@ -607,7 +654,7 @@ body {
     margin: 0.5em 0; }
   .special-deals .all-deals {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-evenly;
     flex-wrap: wrap; }
     .special-deals .all-deals .single-deal {
@@ -663,7 +710,9 @@ body {
           color: #0c6a18;
           animation: colorSwitch 6s ease-in-out infinite alternate; }
       .special-deals .all-deals .single-deal .deal-products {
-        width: 100%; }
+        width: 100%;
+        height: 500px;
+        overflow: auto; }
         .special-deals .all-deals .single-deal .deal-products .single-deal-product {
           display: flex;
           justify-content: space-around;
@@ -725,7 +774,10 @@ body {
         .catelogue-promo .department-list .one-dept h4 a {
           text-decoration: none;
           color: white;
-          font-weight: 100; }
+          font-weight: 100;
+          line-height: 6px;
+          text-align: center;
+          width: 100%; }
 
 .login-page {
   position: relative;
