--- a/src/scss/components/_catelogue_promo.scss
+++ b/src/scss/components/_catelogue_promo.scss
@@ -30,6 +30,7 @@
             }
             h4{
                 position: absolute;
+                
                 top : 50%;
                 left : 50%;
                 transform: translate(-50%,-50%);
@@ -45,6 +46,9 @@
                     text-decoration: none;
                     color: white;
                     font-weight: 100;
+                    line-height: 6px;
+                    text-align: center;
+                    width: 100%;
                 }
             }
         }
