--- a/src/scss/components/_special_deals.scss
+++ b/src/scss/components/_special_deals.scss
@@ -11,7 +11,7 @@
 
     .all-deals{
         display: flex;
-        align-items: center;
+        align-items: stretch;
         justify-content: space-evenly;
         flex-wrap: wrap;
 
@@ -83,6 +83,8 @@
             }
             .deal-products{
                 width: 100%;
+                height: 500px;
+                overflow: auto;
                 .single-deal-product{
                     
                     display: flex;
