--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -3,9 +3,16 @@
     height: 100vh;
     overflow: auto;
     position: relative;
-    padding-bottom: 6em;
+    @media (max-width:768px){
+        padding-bottom: 6em;
+    }
     .hero-image{
         width : 100%;
+        height: 100vh;
+        object-fit: cover;
+        @media (max-width:1024px){
+            height: 45vh;
+        }
     }
     .brand-info{
         .name{
@@ -14,7 +21,13 @@
             align-items: center;
             justify-content: center;
             position: absolute;
-            top : 5em;
+            top : 40vh;
+            @media (max-width:1024px){
+                top : 20vh;
+            }
+            @media (max-width:420px){
+                top : 10vh;
+            }
             .logo{
                 width : 100px;
                 @media (max-width:320px){
@@ -30,6 +43,19 @@
                 padding : 0.3em 0.4em;
                 border-radius: 0.3em;
                 color: $ocen_blue;
+                .msg{
+                   
+                   font-family: $abel;
+                   background-color: $forest_green;
+                   color: white;
+                   padding: 0.5em;
+                   border-radius: 0.3em;
+                   a{
+                       text-decoration: none;
+                       color: $meat_brown;
+                       font-weight: bold;
+                   }
+                }
                 p{
                     font-family: $font_para;
                     font-size: 0.9em;
@@ -45,7 +71,8 @@
         align-items: center;
         margin : 1em auto;
         img{
-            width : 150px;
+            width : 40vw;
+            
             min-height: 450px;
             object-fit: cover;
         }
