--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -11,7 +11,7 @@ $orange : #F75C03;
 // fonts
 $font_para: 'Bebas Neue', cursive;
 $font_heading : 'Bowlby One SC', cursive;
-$font_cursive : 'Pacifico', cursive;
+$font_cursive : 'Dosis', sans-serif;
 
 $heebo : 'Heebo', sans-serif;
 $anton : 'Anton', sans-serif;
