--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,2 +1,3 @@
 @import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Bowlby+One+SC|Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Abel|Anton|Heebo&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Dosis&display=swap');
