--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,11 @@
 @import './elements/cart';
 @import './elements/refresh';
 @import './elements/footer';
+@import './elements/pickinghub_loader';
+@import './elements/hero_image_slider';
+@import './elements/customer_review';
+@import './elements/add_customer_review';
+@import './elements/discount_offers';
 
 // importing components
 @import './components/button';
