--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -52,6 +52,7 @@ footer{
             color: darken($midnight, 10%);
             a{
                 color: $maastricth_blue;
+                text-decoration: none;
             }
         }
     }
