--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 @import './elements/customer_review';
 @import './elements/add_customer_review';
 @import './elements/discount_offers';
+@import './elements/back';
 
 // importing components
 @import './components/button';
