Customer review fix

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -30,6 +30,14 @@
             color: white;
             font-weight: 200;
         }
+        .social-media{
+            a{
+                text-decoration: none;
+                font-size: 1em;
+                margin : 0.3em;
+                color: white;
+            }
+        }
     }
     nav{
         
