--- a/src/App.css
+++ b/src/App.css
@@ -242,6 +242,11 @@ footer {
       -moz-background-clip: text;
       color: transparent;
       font-family: "Bowlby One SC", cursive; }
+    footer .brand-info .social-media a {
+      text-decoration: none;
+      font-size: 2em;
+      margin: 0.3em;
+      color: #531CB3; }
   footer .navigation ul {
     margin: 0.5em 0;
     list-style-type: none;
@@ -364,15 +369,45 @@ footer {
 .add-customer-review {
   background-color: rgba(122, 48, 108, 0.6);
   position: fixed;
-  z-index: 10;
+  z-index: 80;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
   flex-flow: column;
-  align-items: center; }
-  .add-customer-review form .form-group h3 {
-    font-family: "Anton", sans-serif; }
+  align-items: center;
+  padding: 1em;
+  border-radius: 4px;
+  width: 300px; }
+  .add-customer-review .review-form {
+    width: 100%; }
+    .add-customer-review .review-form .form-group {
+      display: flex;
+      flex-flow: column;
+      align-items: stretch; }
+      .add-customer-review .review-form .form-group h3 {
+        font-family: "Anton", sans-serif;
+        color: #531CB3;
+        display: flex;
+        justify-content: space-between;
+        align-items: center; }
+        .add-customer-review .review-form .form-group h3 a {
+          font-size: 2em;
+          text-decoration: none;
+          color: #B3001B; }
+      .add-customer-review .review-form .form-group input {
+        margin: 0.3em 0;
+        padding: 0.3em 0.5em;
+        font-family: "Abel", sans-serif; }
+      .add-customer-review .review-form .form-group textarea {
+        margin: 0.3em 0;
+        padding: 0.3em 0.5em;
+        font-family: "Abel", sans-serif; }
+      .add-customer-review .review-form .form-group .latest {
+        font-family: "Abel", sans-serif;
+        color: white;
+        margin: 0.3em 0;
+        text-align: center; }
 
 .back-button {
   display: none;
@@ -537,6 +572,11 @@ footer {
     .navigation-bar .brand h1 {
       color: white;
       font-weight: 200; }
+    .navigation-bar .brand .social-media a {
+      text-decoration: none;
+      font-size: 1em;
+      margin: 0.3em;
+      color: white; }
   .navigation-bar nav ul {
     list-style-type: none;
     margin: 0.6em 0;
@@ -833,10 +873,7 @@ footer {
     color: transparent;
     margin: 0.5em 0; }
   .special-deals .all-deals {
-    display: flex;
-    align-items: stretch;
-    justify-content: space-evenly;
-    flex-wrap: wrap; }
+    width: 100%; }
     .special-deals .all-deals .single-deal {
       position: relative;
       margin: 1em;
@@ -844,10 +881,14 @@ footer {
       -moz-box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47);
       box-shadow: 4px 4px 5px 0px rgba(122, 48, 108, 0.47); }
       .special-deals .all-deals .single-deal .deal-img {
-        width: 300px;
-        height: 200px;
+        width: 100%;
+        height: 300px;
         object-fit: cover;
-        object-position: center; }
+        object-position: center;
+        filter: blur(2px); }
+        @media (max-width: 420px) {
+          .special-deals .all-deals .single-deal .deal-img {
+            height: 200px; } }
       .special-deals .all-deals .single-deal h4 {
         font-family: "Bebas Neue", cursive;
         background-image: linear-gradient(to right, #7A306C, #531CB3);
@@ -863,7 +904,7 @@ footer {
           color: white;
           font-family: "Heebo", sans-serif;
           padding: 0.3em 0.6em;
-          font-size: 0.8em; }
+          font-size: 0.9em; }
         .special-deals .all-deals .single-deal .info .active-deal {
           background-color: #0c6a18; }
         .special-deals .all-deals .single-deal .info .expired-deal {
@@ -880,7 +921,7 @@ footer {
       .special-deals .all-deals .single-deal .discount {
         background-color: white;
         border-radius: 0.3em;
-        padding: 0.4em 0.6em;
+        padding: 0.4em 0.3em;
         position: absolute;
         top: 120px;
         left: 50%;
@@ -890,10 +931,11 @@ footer {
           color: #0c6a18;
           animation: colorSwitch 6s ease-in-out infinite alternate; }
       .special-deals .all-deals .single-deal .deal-products {
-        width: 100%;
-        height: 500px;
-        overflow: auto; }
+        overflow: auto;
+        display: flex;
+        flex-wrap: wrap; }
         .special-deals .all-deals .single-deal .deal-products .single-deal-product {
+          width: 300px;
           display: flex;
           justify-content: space-around;
           align-items: center;
