--- a/src/scss/elements/_add_customer_review.scss
+++ b/src/scss/elements/_add_customer_review.scss
@@ -1,17 +1,50 @@
 .add-customer-review{
     background-color: rgba($midnight , 0.6);
     position: fixed;
-    z-index : 10;
+    z-index : 80;
     top : 50%;
     left : 50%;
     transform : translate(-50%,-50%);
     display: flex;
     flex-flow: column;
     align-items: center;
-    form{
+    padding : 1em;
+    border-radius: 4px;
+    width : 300px;
+    .review-form{
+        width : 100%;
         .form-group{
+            
+            display: flex;
+            flex-flow: column;
+            align-items: stretch;
             h3{
                 font-family: $anton;
+                color: $ocen_blue;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                a{
+                    font-size: 2em;
+                    text-decoration: none;
+                    color: $crimson;
+                }
+            }
+            input{
+                margin: 0.3em 0;
+                padding : 0.3em 0.5em;
+                font-family: $abel;
+            }
+            textarea{
+                margin: 0.3em 0;
+                padding : 0.3em 0.5em;
+                font-family: $abel;
+            }
+            .latest{
+                font-family: $abel;
+                color: white;
+                margin : 0.3em 0;
+                text-align: center;
             }
         }
     }
