--- a/src/scss/elements/_footer.scss
+++ b/src/scss/elements/_footer.scss
@@ -23,6 +23,14 @@ footer{
             @include gradient_text($midnight,$ocen_blue);
             font-family: $font_heading;
         }
+        .social-media{
+            a{
+                text-decoration: none;
+                font-size: 2em;
+                margin : 0.3em;
+                color: $ocen_blue;
+            }
+        }
     }
     .navigation{
         ul{
