--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,7 @@
 // importting pages
 @import './pages/login_page';
 @import './pages/register_page';
+@import './pages/reset_password';
 @import './pages/terms';
 @import './pages/privacy';
 @import './pages/department';
