--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -76,6 +76,9 @@
         width : 90%;
         align-items: center;
         margin : 1em auto;
+        @media (max-width : 420px){
+            display: none;
+        }
         img{
             width : 40vw;
             
